# NodeNormalization

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-test  KGX_converter.py  README.md  config.json  convert_compendia_to_kgx.py  docker-compose-test.yml  docker-compose.yml  load.py  main.py  pyproject.toml  pytest.ini  redis_config.yaml  requirements.txt  sample.env  setup.py  start_server.sh
config/: config.json
data/: README.md
data-loading/: Dockerfile  README.md  requirements.txt
documentation/: API.md  NodeNormalization.ipynb
nn-loader/: README.md
nn_io_rs/: Cargo.toml  rustfmt.toml
nn_io_rs/src/: lib.rs
node_normalizer/: apidocs.py  convert_compendia_to_kgx.py  examples.py  load_compendia.py  load_compendium.py  load_conflation.py  loader.py  normalizer.py  redis_adapter.py  sanic.py  server.py  set_id.py  util.py
nodenorm-loader/: Dockerfile  README.md
r3/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  requirements.txt
releases/: README.md  TranslatorDecember2023.md  TranslatorFuguJuly2024.md  TranslatorGuppyAugust2024.md  TranslatorHammerheadNovember2024.md  TranslatorMay2024.md  TranslatorOctober2023.md  v2.3.19.md  v2.3.25.md
src/: NodeNormalization.py  NodeNormalizer.py  apidocs.py  load_redis.py  server.py  valid_data_format.json
swagger_ui/: index.html  openapi.yml
tests/: config.json  conftest.py  datafile_with_errors.json  redis_config.yaml  redis_mocks.py  test_callback.py  test_endpoints.py  test_loader.py  test_nn.py  test_norm.py  test_normalizer.py  test_placeholder.py  test_redis_adapter.py  (+1 more)
(+50 files in other folders)
