[package]
name = "nn_io_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nn_io_rs"
crate-type = ["cdylib"]

[dependencies]
csv = "^1.1"
env_logger = "^0.9"
humantime = "^2.1"
itertools = "^0.10"
log = "^0.4"
pyo3 = { version = "^0.16", features = ["extension-module"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
