[package]
name = "nn_io_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nn_io_rs"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
csv = "^1.1"
humantime = "^2.1"
itertools = "^0.10"
pyo3 = { version = "^0.17", features = ["extension-module"] }
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
